# pyterrier-server

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  functions.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: style.yml  test.yml
pyterrier_serve/: __init__.py  _cli.py  _loader.py  _server.py
pyterrier_serve/pt_docs/: index.rst
pyterrier_server/: __init__.py  _loader.py  _mcp_server.py  _server.py
pyterrier_server/pt_docs/: index.rst
pyterrier_server/templates/: index.html
tests/: __init__.py  client.py  test_mcp_server.py  test_pyterrier_serve.py  test_pyterrier_server.py
